<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirebaseAuth.RegistrationActivity"
    android:background="@drawable/gradient_blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textRegistration"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/et_firstName"
        android:layout_marginBottom="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_firstName"
        android:layout_margin="10dp"
        android:hint="@string/enter_first_name"
        android:textSize="18sp"
        android:layout_centerVertical="true"
        android:inputType="text"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_email"
        android:hint="@string/enter_email"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:layout_below="@id/et_firstName"
        android:layout_marginTop="15dp"
        android:inputType="textEmailAddress"
        tools:targetApi="lollipop" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_password"
        android:textSize="18sp"
        android:hint="@string/enter_password"
        android:layout_below="@id/et_email"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_ok"
        android:text="@string/ok"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_password"
        android:layout_marginTop="15dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_registration"
        android:text="@string/you_already_registration"
        android:textSize="16sp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/btn_ok"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_log"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_below="@id/btn_ok"
        android:layout_toEndOf="@id/tv_registration"
        android:layout_toRightOf="@id/tv_registration"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"/>


</RelativeLayout>