<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_name"
        android:text="@string/username"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/cardview_dark_background"
        android:layout_marginTop="30dp"
        />

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_chat"
        android:background="@drawable/ic_action_chat"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_name"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_userId"
        android:textSize="12sp"
        android:text="@string/userid"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_emailId"
        android:textSize="14sp"
        android:text="@string/your_email"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Logout"
        android:text="@string/logout"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:background="@color/design_default_color_on_primary"/>

</RelativeLayout>